add callbacks for buttons of shapedialog

--- a/res/shapedialog.ui
+++ b/res/shapedialog.ui
@@ -22,6 +22,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_apply" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -36,6 +37,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_cancel" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
